--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -39,7 +39,7 @@
     <h2>Desafio aula inaugural</h2>
     <br>
     
-    <form>
+    <form id="techform" onsubmit="submit()">
       <h2>Informações do grupo</h2>
       <label for="nome1">Nome</label>
       <input type="text" id="nome1" name="nome">
@@ -50,7 +50,7 @@
       <label for="nome3">Nome</label>
       <input type="text" id="nome3" name="nome">
       <br><br>
-      <label for="norma4">Nome</label>
+      <label for="nome4">Nome</label>
       <input type="text" id="nome4" name="nome">
       <br><br>
       <label for="nome5">Nome</label>
