--- a/index.html
+++ b/index.html
@@ -4,7 +4,35 @@
     <title>Home</title>
 
     <style>
-        form {
+        #header {
+            width: 420px;
+            height: 42px;
+            top: 184px;
+            left: 352px;
+            gap: 0px;
+            opacity: 0px;
+            font-family: Archivo;
+            font-size: 36px;
+            font-weight: 700;
+            line-height: 42px;
+            text-align: left;
+            background: #FFFFFF;
+        }
+        h2 {
+            width: 188px;
+            height: 26px;
+            top: 237px;
+            left: 352px;
+            gap: 0px;
+            opacity: 0px;
+            font-family: Poppins;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 26px;
+            text-align: left;
+        }
+
+        /* form {
             background-color: white;
             border-radius: 10px;
             padding: 30px; 
@@ -31,17 +59,44 @@
             border: none; 
             border-radius: 5px;
             cursor: pointer; 
+        } */
+
+        label {
+            width: 42px;
+            height: 24px;
+            gap: 0px;
+            opacity: 0px;
+            font-family: Poppins;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: left;
+            background: #4E4958;
+        }
+
+        input[type="submit"]{
+            width: Fixed (608px)px;
+            height: Fixed (56px)px;
+            top: 1284px;
+            left: 416px;
+            padding: 15px 40px 15px 40px;
+            gap: 10px;
+            border-radius: 8px 0px 0px 0px;
+            opacity: 0px;
+            background: #DB1B1B;
         }
     </style>
 </head>
 <body>
-    <h1>Postech Fullstack</h1>
-    <h2>Desafio aula inaugural</h2>
-    <br>
+    <div id="header">
+        <h1>Postech Fullstack</h1>
+        <h2>Desafio aula inaugural</h2>
+    </div>
     
     <form id="techform">
       <h2>Informações do grupo</h2>
       <label for="nome1">Nome</label>
+      <br>
       <input type="text" id="nome1" name="nome">
       <br><br>
       <label for="nome2">Nome</label>
